--- a/oscar4-core/pom.xml
+++ b/oscar4-core/pom.xml
@@ -30,7 +30,7 @@
 
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
+            <artifactId>slf4j-simple</artifactId>
         	<scope>test</scope>
         </dependency>
         <dependency>
