--- a/oscar4-tokeniser/pom.xml
+++ b/oscar4-tokeniser/pom.xml
@@ -30,8 +30,8 @@
 
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-        	<scope>test</scope>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
         </dependency>
 		<dependency>
 			<groupId>junit</groupId>
