--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,7 @@
                 <artifactId>automaton</artifactId>
                 <version>1.11-4</version>
             </dependency>
+
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -177,9 +178,10 @@
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-jdk14</artifactId>
+                <artifactId>slf4j-simple</artifactId>
                 <version>1.6.1</version>
             </dependency>
+
             <dependency>
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
