--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
         <module>oscar4-formatter</module>
         <module>oscar4-recogniser-core</module>
         <module>oscar4-data</module>
+        <module>oscar4-all</module>
     </modules>
 
     <dependencyManagement>
@@ -127,6 +128,11 @@
             <dependency>
                 <groupId>${oscar.groupId}</groupId>
                 <artifactId>oscar4-api</artifactId>
+                <version>${oscar.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${oscar.groupId}</groupId>
+                <artifactId>oscar4-data</artifactId>
                 <version>${oscar.version}</version>
             </dependency>
 
