--- a/oscar4-all/pom.xml
+++ b/oscar4-all/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
         <artifactId>oscar4</artifactId>
-        <version>4.0.2</version>
+        <version>4.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>oscar4-all</artifactId>
