--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,31 @@
         <oscar.groupId>${project.groupId}</oscar.groupId>
         <oscar.version>${project.version}</oscar.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- Use:
+                  mvn versions:display-dependency-updates
+             to check for updates for these below
+        -->
+        <opsin-inchi.version>1.3.0</opsin-inchi.version>
+        <xom.version>1.2.5</xom.version>
+        <log4j.version>1.2.16</log4j.version>
+        <icu4j.version>3.8</icu4j.version>
+        <poi.version>3.2-FINAL</poi.version>
+        <opennlp-maxent.version>3.0.3</opennlp-maxent.version>
+        <opennlp-tools.version>1.5.3</opennlp-tools.version>
+        <automaton.version>1.11-8</automaton.version>
+        <slf4j-api.version>1.6.1</slf4j-api.version>
+        <slf4j-simple.version>1.6.1</slf4j-simple.version>
+        <commons-lang.version>2.5</commons-lang.version>
+        <commons-io.version>2.1</commons-io.version>
+        <commons-discovery.version>20040218.194635</commons-discovery.version>
+        <jregex.version>1.2_01</jregex.version>
+        <commons-math.version>2.2</commons-math.version>
+        <commons-collections.version>3.2.1</commons-collections.version>
+        <guava-collections.version>r03</guava-collections.version>
+        <jexample.version>4.4-378</jexample.version>
+        <mockito-core.version>1.8.5</mockito-core.version>
+        <junit.version>4.8.2</junit.version>
     </properties>
 
     <repositories>
@@ -143,102 +168,102 @@
             <dependency>
                 <groupId>uk.ac.cam.ch.opsin</groupId>
                 <artifactId>opsin-inchi</artifactId>
-                <version>1.3.0</version>
+                <version>${opsin-inchi.version}</version>
             </dependency>
             <dependency>
                 <groupId>xom</groupId>
                 <artifactId>xom</artifactId>
-                <version>1.2.5</version>
+                <version>${xom.version}</version>
             </dependency>
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
-                <version>1.2.16</version>
+                <version>${log4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.ibm.icu</groupId>
                 <artifactId>icu4j</artifactId>
-                <version>3.8</version>
+                <version>${icu4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi</artifactId>
-                <version>3.2-FINAL</version>
+                <version>${poi.version}</version>
             </dependency>
             <dependency>
               <groupId>org.apache.opennlp</groupId>
               <artifactId>opennlp-maxent</artifactId>
-              <version>3.0.3</version>
+              <version>${opennlp-maxent.version}</version>
             </dependency>
             <dependency>
               <groupId>org.apache.opennlp</groupId>
               <artifactId>opennlp-tools</artifactId>
-              <version>1.5.3</version>
+              <version>${opennlp-tools.version}</version>
             </dependency>
             <dependency>
                 <groupId>dk.brics.automaton</groupId>
                 <artifactId>automaton</artifactId>
-                <version>1.11-8</version>
+                <version>${automaton.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.6.1</version>
+                <version>${slf4j-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
-                <version>1.6.1</version>
+                <version>${slf4j-simple.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
-                <version>2.5</version>
+                <version>${commons-lang.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.1</version>
+                <version>${commons-io.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-discovery</groupId>
                 <artifactId>commons-discovery</artifactId>
-                <version>20040218.194635</version>
+                <version>${commons-discovery.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.sourceforge.jregex</groupId>
                 <artifactId>jregex</artifactId>
-                <version>1.2_01</version>
+                <version>${jregex.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-math</artifactId>
-                <version>2.2</version>
+                <version>${commons-math.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-collections</groupId>
                 <artifactId>commons-collections</artifactId>
-                <version>3.2.1</version>
+                <version>${commons-collections.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava-collections</artifactId>
-                <version>r03</version>
+                <version>${guava-collections.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.sf.jexample</groupId>
                 <artifactId>jexample</artifactId>
-                <version>4.4-378</version>
+                <version>${jexample.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>1.8.5</version>
+                <version>${mockito-core.version}</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.8.2</version>
+                <version>${junit.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -247,6 +272,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
                 <configuration>
                     <argLine>-Xms512m -Xmx1024m</argLine>
                 </configuration>
