--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <xom.version>1.2.5</xom.version>
         <log4j.version>1.2.17</log4j.version>
         <icu4j.version>53.1</icu4j.version>
-        <poi.version>3.10-beta2</poi.version>
+        <poi.version>3.10-FINAL</poi.version>
         <opennlp-maxent.version>3.0.3</opennlp-maxent.version>
         <opennlp-tools.version>1.5.3</opennlp-tools.version>
         <automaton.version>1.11-8</automaton.version>
